--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "fs-extra": "^10.0.0",
     "mustache": "^4.2.0",
     "node-fetch": "^2.6.1",
-    "remark": "^13.0.0",
-    "remark-behead": "^2.3.3",
-    "remark-github": "^10.1.0",
-    "remark-html": "^13.0.1"
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "node-watch": "^0.7.1",
